# hangar_back

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: build-backend.yml  build-base-image.yml
base_image/: Dockerfile
base_image/config/: configure-webroot.sh  default.conf  default.conf.template  nginx.conf  supervisord.conf
migrations/: 20250924065250_create_projects_table.sql  20251009130308_db.sql  20251009130308_projects_table.sql
src/: config.rs  error.rs  main.rs  middleware.rs  router.rs  state.rs
src/handlers/: admin_handler.rs  auth_handler.rs  database_handler.rs  health.rs  mod.rs  project_handler.rs
src/model/: database.rs  project.rs  user.rs
src/services/: auth_service.rs  crypto_service.rs  database_service.rs  docker_service.rs  github_service.rs  jwt.rs  mod.rs  project_service.rs  validation_service.rs
