[package]
name = "hangar_back"
version = "0.1.0"
edition = "2024"


[dependencies]
# Le framework web principal
axum = "0.8.4"

# Le runtime asynchrone
tokio = { version = "1.45.1", features = ["full"] }

# La tour de services et ses middlewares HTTP
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "trace", "cors", "compression-gzip", "timeout"] }


# Logging structuré
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Sérialisation / Désérialisation
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Gestion des erreurs
thiserror = "2.0.12"

# Chargement des variables d'environnement depuis un fichier .env
dotenvy = "0.15.7"